# gba-sprite-engine

./: CMakeLists.txt  README.md  timespent.csv
demos/Sonic escape/: CMakeLists.txt
demos/Sonic escape/src/: Block.cpp  Block.h  Gamescene.cpp  Gamescene.h  StartScreen.cpp  StartScreen.h  blockdata.h  gamescenebg.h  main.cpp  shared.h  sonic.cpp  sonic.h  sonicdata.h  sonicdeath.h  sonicjump.h  startscreenbg.h  startscreenmusic.h
demos/demo1-basicfeatures/src/: flying_stuff_scene.cpp  flying_stuff_scene.h  kul.h
demos/demo2-arkanoid/src/: SplashScreen.cpp  pats.h  splashimage.h  spritedata.h
demos/demo3-foodthrowing/src/: bullet.cpp
